--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,11 @@
 fastapi
 uvicorn
-prometheus-fastapi-instrumentator
-openai-whisper
-torch
-torchaudio
-kokoro
-supabase
 python-multipart
-websockets
 httpx
+supabase
+python-dotenv
+pydantic
+pydantic-settings
+prometheus-fastapi-instrumentator
+numpy
+soundfile
